# chessBot

./: main.py  ui.py
UI/: ui.py
cpp/: CMakeLists.txt  build.sh  example.py
cpp-modules/: CMakeLists.txt
cpp/src/: evaluation.cpp
evaluation/: constants.py  evaluation.py
genetic/: game.py  player.py  population.py
static_evaluation/: static_evaluation.py
tree/: evaluation.py  test.py  tree.py
